--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style/index.css">
-    <link rel="stylesheet" href="style/reset.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <link rel="stylesheet" href="style/index.css" type="text/css">
+    <link rel="stylesheet" href="style/reset.css" type="text/css">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/moonspam/NanumSquare@1.0/nanumsquare.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap" rel="stylesheet">
@@ -16,11 +16,9 @@
 
 <body>
     <header>
-        <div class="logo">
-            <a href="index.html"><img src="image/nidiaLogo4.png" alt="headerLogo"></a>
-        </div>
+        <a class="logo" href="index.html"><img src="image/nidiaLogo4.png" alt="headerLogo"></a>
 
-        <nav>
+        <nav class="pcNav">
             <ul>
                 <li><a href="index.html">홈</a></li>
                 <li><a href="compIntro.html">기업 소개</a></li>
@@ -29,7 +27,14 @@
                 <li><i class="far fa-user"></i></i></li>
             </ul>
         </nav>
+
+        <div class="mobileNav">
+            <div class="hamburgerMenu">
+                <span class="line"></span>
+            </div>
+        </div>
     </header>
+
     <div class="modal">
         <div class="loginWrapper">
             <input type="text" id="id" placeholder="ID">
@@ -46,6 +51,7 @@
     <div class="bodyWrapper">
         <div class="mainWrapper">
             <div class="mainImage"></div>
+
             <section class="mainIntro">
                 <h1>More Safety, More Powerful</h1>
                 <h2>전 세계 5억명이 사용하는 최고의 백신 프로그램<br>지금 바로 체험해보세요!</h2>
@@ -53,10 +59,9 @@
             </section>
         </div>
 
-        <div class="boardNav">
+        <div class="pcBoardNav">
             <ul class="mainNav">
-                <li class="mainNav-list">
-                    <a class="subject" href="board.html">공 지 사 항<i class="fas fa-chevron-right"></i> </a>
+                <li class="mainNav-list"><a class="subject" href="board.html">공 지 사 항<i class="fas fa-chevron-right"></i> </a>
                     <ul class="subNav">
                         <li><a href="writing1.html"><span>중요</span>제품 사용 가이드</a></li>
                         <li><a href=""><span>중요</span>제품 오류에 대한 안내사항</a></li>
@@ -64,6 +69,7 @@
                         <li><a href="">2월 랜섬웨어에 대한 분석 보고서</a></li>
                     </ul>
                 </li>
+
                 <li class="mainNav-list"><a class="subject" href="#">개 발 이 슈<i class="fas fa-chevron-right"></i> </a>
                     <ul class="subNav">
                         <li><a href=""><span>중요</span>제품 사용 가이드</a></li>
@@ -72,6 +78,7 @@
                         <li><a href="">2월 랜섬웨어에 대한 분석 보고서</a></li>
                     </ul>
                 </li>
+                
                 <li class="mainNav-list"><a class="subject" href="#">안 내 사 항<i class="fas fa-chevron-right"></i> </a>
                     <ul class="subNav">
                         <li><a href=""><span>중요</span>제품 사용 가이드</a></li>
@@ -80,6 +87,15 @@
                         <li><a href="">2월 랜섬웨어에 대한 분석 보고서</a></li>
                     </ul>
                 </li>
+            </ul>
+        </div>
+
+        <div class="mobileBoardNav">
+            <ul class="mainNav">
+                <li class="mainNav-list"><a class="subject" href="board.html"><i class="fas fa-bullhorn"></i>공 지 사 항 </a></li>
+                <li class="mainNav-list"><a class="subject" href="board.html"><i class="fas fa-file-code"></i>개 발 이 슈</a></li>
+                <li class="mainNav-list"><a class="subject" href="board.html"><i class="far fa-calendar-check"></i>이 벤 트 안 내</a></li>
+                    
             </ul>
         </div>
 
