--- a/index.html
+++ b/index.html
@@ -35,17 +35,26 @@
         </div>
     </header>
 
-    <div class="modal">
-        <div class="loginWrapper">
-            <input type="text" id="id" placeholder="ID">
-            <input type="text" id="password" placeholder="PASSWORD">
+    <div class="mobileMenu">
+        <div class="loginSection">
+            <span>로그인</span>
+            <span>회원가입</span>
         </div>
 
+        <ul>
+            <li><a href="index.html">홈</a></li>
+            <li><a href="compIntro.html">기업 소개</a></li>
+            <li><a href="product.html">제품 안내</a></li>
+            <li><a href="contact.html">고객 지원</a></li>
+            <li><i class="fas fa-arrow-left"></i></li>
+        </ul>
+    </div>
+
+    <div class="modal">
         <div class="buttonWrapper">
             <button>로그인</button>
             <button>회원가입</button>
         </div>
-        
     </div>
 
     <div class="bodyWrapper">
