--- a/product.html
+++ b/product.html
@@ -63,7 +63,7 @@
             </div>
         </div>
 
-        <div class="productWrapper">
+        <div class="pcProductWrapper">
             <div class="product-grid">
 
                 <div class="blank gridFirst"></div>
@@ -260,6 +260,54 @@
                 </div>
 
 
+            </div>
+        </div>
+
+        <div class="mobileProductWrapper">
+            <div class="productWrapper" id="free">
+                <div class="imgSection">
+
+                </div>
+
+                <div class="productInfoWrapper">
+                    <div class="productName">
+                        <h1>NIDIA SOFTWARE</h1>
+                        <h2></h2>
+                    </div>
+                    <div class="productPrice"></div>
+                    <div class="purchaseBtn"></div>
+                </div>
+
+            </div>
+
+            <div class="productWrapper" id="premium">
+                <div class="imgSection">
+
+                </div>
+
+                <div class="productInfoWrapper">
+                    <div class="productName">
+                        <h1>NIDIA SOFTWARE</h1>
+                        <h2></h2>
+                    </div>
+                    <div class="productPrice"></div>
+                    <div class="purchaseBtn"></div>
+                </div>
+            </div>
+
+            <div class="productWrapper" id="ultimate">
+                <div class="imgSection">
+
+                </div>
+
+                <div class="productInfoWrapper">
+                    <div class="productName">
+                        <h1>NIDIA SOFTWARE</h1>
+                        <h2></h2>
+                    </div>
+                    <div class="productPrice"></div>
+                    <div class="purchaseBtn"></div>
+                </div>
             </div>
         </div>
 
