--- a/product.html
+++ b/product.html
@@ -264,10 +264,8 @@
         </div>
 
         <div class="mobileProductWrapper">
-            <div class="productWrapper" id="free">
-                <div class="imgSection">
-
-                </div>
+            <div class="productWrapper">
+                <div class="imgSection"></div>
 
                 <div class="productInfoWrapper">
                     <div class="productName">
@@ -280,35 +278,12 @@
 
             </div>
 
-            <div class="productWrapper" id="premium">
-                <div class="imgSection">
-
-                </div>
-
-                <div class="productInfoWrapper">
-                    <div class="productName">
-                        <h1>NIDIA SOFTWARE</h1>
-                        <h2></h2>
-                    </div>
-                    <div class="productPrice"></div>
-                    <div class="purchaseBtn"></div>
-                </div>
+            <div class="buttonWrapper">
+                <button class="active">무료</button>
+                <button>프리미엄</button>
+                <button>얼티메이트</button>
             </div>
 
-            <div class="productWrapper" id="ultimate">
-                <div class="imgSection">
-
-                </div>
-
-                <div class="productInfoWrapper">
-                    <div class="productName">
-                        <h1>NIDIA SOFTWARE</h1>
-                        <h2></h2>
-                    </div>
-                    <div class="productPrice"></div>
-                    <div class="purchaseBtn"></div>
-                </div>
-            </div>
         </div>
 
         <article class="productIntro">
