--- a/product.html
+++ b/product.html
@@ -265,7 +265,9 @@
 
         <div class="mobileProductWrapper">
             <div class="productWrapper">
-                <div class="imgSection"></div>
+                <div class="imgSection">
+                    <img src="" id="product" alt="productImg">
+                </div>
 
                 <div class="productInfoWrapper">
                     <div class="productName">
