--- a/product.html
+++ b/product.html
@@ -73,12 +73,12 @@
                     <h2>무료버전</h2>
                 </div>
                 <div class="productImage gridFirst" id="premium">
-                    <img src="image/anitivirus_premium.png" alt="premium">
+                    <img src="image/antivirus_premium.png" alt="premium">
                     <h1>안티바이러스</h1>
                     <h2>프리미엄</h2>
                 </div>
                 <div class="productImage gridFirst" id="ultimate">
-                    <img src="image/anitivirus_ultimate.png" alt="ultimate">
+                    <img src="image/antivirus_ultimate.png" alt="ultimate">
                     <h1>안티바이러스</h1>
                     <h2>얼티메이트</h2>
                 </div>
@@ -286,11 +286,18 @@
                 <button>얼티메이트</button>
             </div>
 
+            <div class="productInfo">
+                <p><i class="fas fa-check"></i>무료로 프로그램을 이용하시고 내 PC를 안전하게 지켜내세요.</p>
+                <p><i class="fas fa-check"></i>실시간 감시와 정밀 검사로 바이러스의 위협을 차단하세요.</p>
+                <p><i class="fas fa-check"></i>랜섬웨어 차단을 통해 소중한 파일들을 해커로부터 보호합니다.</p>
+
+            </div>
+
         </div>
 
         <article class="productIntro">
             <section class="programUI">
-                <img id="programUI" src="image/programUI.png" alt="programUI">
+                <img src="image/programUI.png" alt="programUI">
                 <h1>더욱 간편하게 사용하는 백신 프로그램</h1>
                 <h2>이제 보안에 대한 걱정은 NO! 심플하고 편리한 백신 프로그램으로 PC를 관리하세요</h2>
             </section>
