--- a/product.html
+++ b/product.html
@@ -243,6 +243,38 @@
                     </svg>
                 </div>
 
+                <div class="productInfo gridSecond">
+                    <h1>다중기기 등록</h1>
+                    <h2>최대 4대의 기기까지 프로그램 등록이 가능합니다. </h2>
+                </div>
+
+                <div class="productOX gridSecond">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="45" height="45" viewBox="0 0 39.728 39.728">
+                        <g id="그룹_4" data-name="그룹 4" transform="translate(-745.929 -1046.429)">
+                            <line id="선_9" data-name="선 9" x1="25.585" y2="25.585" transform="translate(753 1053.5)" fill="none" stroke="#fd4141" stroke-linecap="round" stroke-width="10"/>
+                            <line id="선_10" data-name="선 10" x1="25.585" y2="25.585" transform="translate(778.585 1053.5) rotate(90)" fill="none" stroke="#fd4141" stroke-linecap="round" stroke-width="10"/>
+                        </g>
+                    </svg>
+                </div>
+
+                <div class="productOX gridSecond">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="45" height="45" viewBox="0 0 39.728 39.728">
+                        <g id="그룹_4" data-name="그룹 4" transform="translate(-745.929 -1046.429)">
+                            <line id="선_9" data-name="선 9" x1="25.585" y2="25.585" transform="translate(753 1053.5)" fill="none" stroke="#fd4141" stroke-linecap="round" stroke-width="10"/>
+                            <line id="선_10" data-name="선 10" x1="25.585" y2="25.585" transform="translate(778.585 1053.5) rotate(90)" fill="none" stroke="#fd4141" stroke-linecap="round" stroke-width="10"/>
+                        </g>
+                    </svg>
+                </div>
+
+                <div class="productOX gridSecond">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="45" height="45" viewBox="0 0 55 55">
+                        <g id="타원_2" data-name="타원 2" fill="none" stroke="#1cd233" stroke-width="12">
+                            <circle cx="27.5" cy="27.5" r="27.5" stroke="none"/>
+                            <circle cx="27.5" cy="27.5" r="21.5" fill="none"/>
+                        </g>
+                    </svg>
+                </div>
+
                 <div class="blank"></div>
                 <div class="downloadItem">
                     <h1>무료</h1>
