--- a/contact.html
+++ b/contact.html
@@ -132,10 +132,9 @@
             </article>
         </div>
 
-        <div class="boardNav">
+        <div class="pcBoardNav">
             <ul class="mainNav">
-                <li class="mainNav-list">
-                    <a class="subject" href="board.html">공 지 사 항<i class="fas fa-chevron-right"></i> </a>
+                <li class="mainNav-list"><a class="subject" href="board.html">공 지 사 항<i class="fas fa-chevron-right"></i> </a>
                     <ul class="subNav">
                         <li><a href="writing1.html"><span>중요</span>제품 사용 가이드</a></li>
                         <li><a href=""><span>중요</span>제품 오류에 대한 안내사항</a></li>
@@ -143,6 +142,7 @@
                         <li><a href="">2월 랜섬웨어에 대한 분석 보고서</a></li>
                     </ul>
                 </li>
+
                 <li class="mainNav-list"><a class="subject" href="#">개 발 이 슈<i class="fas fa-chevron-right"></i> </a>
                     <ul class="subNav">
                         <li><a href=""><span>중요</span>제품 사용 가이드</a></li>
@@ -151,6 +151,7 @@
                         <li><a href="">2월 랜섬웨어에 대한 분석 보고서</a></li>
                     </ul>
                 </li>
+                
                 <li class="mainNav-list"><a class="subject" href="#">안 내 사 항<i class="fas fa-chevron-right"></i> </a>
                     <ul class="subNav">
                         <li><a href=""><span>중요</span>제품 사용 가이드</a></li>
@@ -159,6 +160,15 @@
                         <li><a href="">2월 랜섬웨어에 대한 분석 보고서</a></li>
                     </ul>
                 </li>
+            </ul>
+        </div>
+
+        <div class="mobileBoardNav">
+            <ul class="mainNav">
+                <li class="mainNav-list"><a class="subject" href="board.html"><i class="fas fa-bullhorn"></i>공 지 사 항 </a></li>
+                <li class="mainNav-list"><a class="subject" href="board.html"><i class="fas fa-file-code"></i>개 발 이 슈</a></li>
+                <li class="mainNav-list"><a class="subject" href="board.html"><i class="far fa-calendar-check"></i>이 벤 트 안 내</a></li>
+                    
             </ul>
         </div>
     </div>
