--- a/board.html
+++ b/board.html
@@ -69,16 +69,16 @@
                 <h2>제품에 대한 중요 사항을 알려드립니다.</h2>
             </div>
 
-            <div class="tableContents">
+            <div class="pcTableContents">
                 <div class="tableClassifi" id="tableSub">제목</div>
                 <div class="tableClassifi" id="tableDate">작성일</div>
                 <div class="tableClassifi" id="tableView">조회수</div>
 
-                <div class="tableItem"><span>중요</span>제품 사용 가이드</div>
+                <div class="tableItem"><span class="imp">중요</span>제품 사용 가이드</div>
                 <div class="tableItem date">2018. 10. 18.</div>
                 <div class="tableItem view">4210</div>
 
-                <div class="tableItem"><span>중요</span>제품 오류에 대한 안내사항</div>
+                <div class="tableItem"><span class="imp">중요</span>제품 오류에 대한 안내사항</div>
                 <div class="tableItem date">2018. 10. 18.</div>
                 <div class="tableItem view">4210</div>
 
@@ -89,6 +89,23 @@
                 <div class="tableItem">2월 랜섬웨어에 대한 분석 보고서</div>
                 <div class="tableItem date">2018. 10. 18.</div>
                 <div class="tableItem view">4210</div>
+            </div>
+
+            <div class="mobileTableContents">
+                <div class="tableClassifi" id="tableSub">제목</div>
+                <div class="tableItem">
+                    <span class="imp">중요</span>제품 사용 가이드
+                </div>
+                <div class="tableItem">
+                    <span class="imp">중요</span>제품 오류에 대한 안내사항
+                </div>
+
+                <div class="tableItem">
+                    2월 악성코드에 대한 분석 보고서
+                </div>
+                <div class="tableItem">
+                    2월 랜섬웨어에 대한 분석 보고서
+                </div>
             </div>
 
             <div class="pageNumberWrapper">
