--- a/board.html
+++ b/board.html
@@ -95,6 +95,7 @@
                 <div class="tableClassifi" id="tableSub">제목</div>
                 <div class="tableItem">
                     <span class="imp">중요</span>제품 사용 가이드
+                    <span class="date">2018. 10. 18.</span>
                 </div>
                 <div class="tableItem">
                     <span class="imp">중요</span>제품 오류에 대한 안내사항
