--- a/board.html
+++ b/board.html
@@ -94,18 +94,29 @@
             <div class="mobileTableContents">
                 <div class="tableClassifi" id="tableSub">제목</div>
                 <div class="tableItem">
-                    <span class="imp">중요</span>제품 사용 가이드
-                    <span class="date">2018. 10. 18.</span>
+                    <a href="writing1.html">
+                        <span class="imp">중요</span>제품 사용 가이드
+                        <span class="date">2018. 10. 18.</span>
+                    </a>
                 </div>
                 <div class="tableItem">
-                    <span class="imp">중요</span>제품 오류에 대한 안내사항
+                    <a href="writing1.html">
+                        <span class="imp">중요</span>제품 오류에 대한 안내사항
+                        <span class="date">2018. 10. 18.</span>
+                    </a>
                 </div>
 
                 <div class="tableItem">
-                    2월 악성코드에 대한 분석 보고서
+                    <a href="writing1.html">
+                        2월 악성코드에 대한 분석 보고서
+                        <span class="date">2018. 10. 18.</span>
+                    </a>
                 </div>
                 <div class="tableItem">
-                    2월 랜섬웨어에 대한 분석 보고서
+                    <a href="writing1.html">
+                        2월 랜섬웨어에 대한 분석 보고서
+                        <span class="date">2018. 10. 18.</span>
+                    </a>
                 </div>
             </div>
 
