--- a/board.html
+++ b/board.html
@@ -74,19 +74,19 @@
                 <div class="tableClassifi" id="tableDate">작성일</div>
                 <div class="tableClassifi" id="tableView">조회수</div>
 
-                <div class="tableItem"><span class="imp">중요</span>제품 사용 가이드</div>
+                <div class="tableItem"><a href="writing1.html"><span class="imp">중요</span>제품 사용 가이드</a></div>
                 <div class="tableItem date">2018. 10. 18.</div>
                 <div class="tableItem view">4210</div>
 
-                <div class="tableItem"><span class="imp">중요</span>제품 오류에 대한 안내사항</div>
+                <div class="tableItem"><a href="writing1.html"><span class="imp">중요</span>제품 오류에 대한 안내사항</a></div>
                 <div class="tableItem date">2018. 10. 18.</div>
                 <div class="tableItem view">4210</div>
 
-                <div class="tableItem">2월 악성코드에 대한 분석 보고서</div>
+                <div class="tableItem"><a href="writing1.html">2월 악성코드에 대한 분석 보고서</a></div>
                 <div class="tableItem date">2018. 10. 18.</div>
                 <div class="tableItem view">4210</div>
 
-                <div class="tableItem">2월 랜섬웨어에 대한 분석 보고서</div>
+                <div class="tableItem"><a href="writing1.html">2월 랜섬웨어에 대한 분석 보고서</a></div>
                 <div class="tableItem date">2018. 10. 18.</div>
                 <div class="tableItem view">4210</div>
             </div>
