--- a/writing1.html
+++ b/writing1.html
@@ -69,12 +69,19 @@
                 <h2>제품에 대한 중요 사항을 알려드립니다.</h2>
             </div>
 
-            <div class="tableContents">
+            <div class="pcTableContents">
                 <div class="tableClassifi" id="tableSub">
-                    <div class="tableItem"><span>중요</span>제품 사용 가이드</div>
+                    <div class="tableItem"><span class="imp">중요</span>제품 사용 가이드</div>
                 </div>
                 <div class="tableClassifi" id="tableDate">2018. 10. 18.</div>
                 <div class="tableClassifi" id="tableView">4210</div>
+            </div>
+
+            <div class="mobileTableContents">
+                <div class="tableClassifi" id="tableSub">
+                    <div class="tableItem"><span class="imp">중요</span>제품 사용 가이드</div>
+                </div>
+                <div class="tableClassifi" id="tableDate">2018. 10. 18.</div>
             </div>
 
             <div class="writingSection">
