--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="style/reset.css">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/moonspam/NanumSquare@1.0/nanumsquare.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <title>Document</title>
+    <title>환영합니다. 니디아입니다.</title>
 </head>
 
 <body>
